--- a/res/css/style.css
+++ b/res/css/style.css
@@ -195,7 +195,7 @@ nav div.avatar-container {
     padding: 10px;
 }
 
-.post .post-image img {
+.post .post-image img, .post .post-video video {
     width: 100%;
     min-height: 150px;
     max-height: 350px;
