renamed .liked -> .followed on follow button

--- a/res/css/browseStyle.css
+++ b/res/css/browseStyle.css
@@ -37,7 +37,7 @@ body{
 
 }
 
-.follow-button.liked {
+.follow-button.followed {
     background-color: #fefefe;
     color: #01579b;
     border-style: groove;
