--- a/res/css/browseStyle.css
+++ b/res/css/browseStyle.css
@@ -1,12 +1,26 @@
 body{
-    background-color: #fefefe;
+    height: 100%; padding: 0; margin: 0;
+}
+
+.main{
+    width: 50%;
+    min-height: 100%;
+    margin: auto auto;
+    padding: 90px 15px 15px 15px;
+    background-color: #ffffff;
+}
+
+.profile-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 15px;
 }
 
 .profile{
+    display: inline-block;
     background-color: #fefefe;
-    width: 20%;
-    margin: 15px auto;
-    box-shadow: 0 0 15px rgba(38, 50, 56, 0.33);
+    border-style: groove;
+    border-width: 1px;
     border-radius: 5px;
     padding: 2px;
 }
