--- a/res/css/browseStyle.css
+++ b/res/css/browseStyle.css
@@ -4,6 +4,7 @@ body{
 
 .main{
     width: 50%;
+    min-width: 25%;
     min-height: 100%;
     margin: auto auto;
     padding: 90px 15px 15px 15px;
