--- a/res/css/style.css
+++ b/res/css/style.css
@@ -20,12 +20,12 @@ a {
 }
 
 ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-ul li:nth-child(n+2){
+ul li:nth-child(n+2) {
     padding-bottom: 4px;
     padding-top: 2px;
     border-top: 0.5px solid #d0d0d0;
@@ -139,14 +139,14 @@ nav div.avatar-container {
     background-color: #ffffff;
 }
 
-.dropdown-menu{
+.dropdown-menu {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     right: 5px;
     width: auto;
     height: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
     text-align: left;
